--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build-css": "tailwindcss build -i src/styles.css -o public/styles.css --watch"
+    "build-css": "npx tailwindcss build -i src/styles.css -o public/styles.css --watch"
   },
   "author": "",
   "license": "ISC",
